--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 <div class="about-content">
                   <div class="row">
                     <div class="img">
-                        <img src="Images/About-me.jpg" alt="about-me" />
+                        <img src="Images/about.jpg" alt="about-me" />
                     </div>
                     <div class="text">
                         <h4>I'm Hisham Kuntawala</h4>
@@ -142,7 +142,7 @@
                             <div class="skill-box">
                                 <h6>HTML5</h6>
                                 <div class="skill-bar">
-                                    <divhttps://github.com/hishamkuntawala/My-Portfolio.git class="skill-bar-in" style="width: 92%">
+                                    <div class="skill-bar-in" style="width: 92%">
                                         <span>92%</span>
                                     </div>
                                 </div>
@@ -174,7 +174,7 @@
                             
                         </div>
                         <div class="img">
-                            <img src="Images/Skills.jpg" alt="skills"/>
+                            <img src="Images/Background-img.jpg" alt="skills"/>
                         </div>
                 </div>
                 
